--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="icon" href="image/sinang.svg" type="image/x-icon"> 
     <link rel="stylesheet" href="Asset/css/style.css">
     <title>Sinang Permata</title>
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-</head>k
+</head>
 <body>
 <section id="header">
     <nav>
@@ -78,13 +81,14 @@
     <span class="search">Cari Lebih Tau Tentang Sinang.... </span>
     <a class="link" href=""><i class='bx bx-right-arrow-alt'></i></a>
 </section>
-<!-- <img src="image/Polygon 2.png" class="polygon"> -->
+<img src="image/Polygon 2.png" class="polygon">
 <section class="workflow">
     <div class="middle">
         <span class="titlewk">Work Flow</span>
         <h1 class="titleow">Our Working Process</h1>
         <div class="border-container">
         <div class="border1">
+            <!-- <img  src="image/workflow/Arrow 1.png"  class="arow" alt=""> -->
             <h3 class="font">PLANNING</h3>
         </div>
         <div class="border2">
@@ -97,52 +101,175 @@
         <h3 class="font">DEVELOPMENT</h3>
         </div>
         </div>
-        <div class="page4">
-            <div>
-             <h1 class="titlebar">Service Us</h1>
-            </div>
-            <div class="border-radius">
-                    <a href=""><div class="radius1">
-                        <div class="littel-radius1">
-                        <p class="font1"><img class="icon" src="image/sevices/computer (1) 2.png" alt=""> IT SOFTWARE</p>
-                        <img class="image1" src="image/software/Group 106.png" alt="">
-                        <img class="image1" src="image/software/Group 100.png" alt="">
-                        <img class="image1" src="image/software/Group 101.png" alt="">
-                        <img class="image1" src="image/software/Group 102.png" alt="">
-                        </div>
-                    </div></a>
-                    <a href=""><div class="radius2">
-                    <div class="littel-radius2">
-                    <P class="font1"><img class="icon" src="image/sevices/chip (1) 2.png" alt="">IT HARDWARE</P>
-                    <img class="image1" src="image/hardware/Group 110.png" alt="">
-                    <img class="image1" src="image/hardware/Group 107.png" alt="">
-                    <img class="image1" src="image/hardware/Group 108.png" alt="">
-                    <img class="image1" src="image/hardware/Group 109.png" alt="">
-                        </div>
-                    </div></a>
-                    <a href=""><div class="radius3">
-                    <div class="littel-radius3">
-                        <P class="font1"><img class="icon" src="image/sevices/multimedia (1) 2.png" alt=""> MULTIMEDIA</P>
-                        <img class="image1" src="image/multimedia/Group 114.png" alt="">
-                        <img class="image1" src="image/multimedia/Group 111.png" alt="">
-                        <img class="image1" src="image/multimedia/Group 112.png" alt="">
-                        <img class="image1" src="image/multimedia/Group 113.png" alt="">
-                        </div>
-                    </div></a>
-            </div>
-            <div class="testi">
-                <h1 class="jdl">Testimony</h1>
-                <h1 class="jdl-1">Client Testimonials</h1>
+    </section>
+    <!-- <section> -->
+    <div class="frame">
+        <div class="container">
+            <h1>Services Us</h1>
+            <div class="box-frame">
+                    <button>
+                    <div class="buton">
+                    <h1><img src="image/sevices/computer (1) 2.png">IT SOFTWARE</h1>
+                    </div>
+                    <img src="image/software/Group 106.png" alt="">
+                    <img src="image/software/Group 100.png" alt="">
+                    <img src="image/software/Group 101.png" alt="">
+                    <img src="image/software/Group 102.png" alt="">
+                    </button>
+                </div>
+            <div class="box-frame">
+                    <button>
+                    <div class="buton">
+                        <h1><img src="image/sevices/chip (1) 2.png">IT HARDWARE</h1>
+                    </div>
+                    <img src="image/hardware/Group 110.png" alt="">
+                    <img src="image/hardware/Group 107.png" alt="">
+                    <img src="image/hardware/Group 108.png" alt="">
+                    <img src="image/hardware/Group 109.png" alt="">
+                    </button>
+                </div>
+            <div class="box-frame">
+                <button>
+                <div class="buton">
+                    <h1><img src="image/sevices/multimedia (1) 2.png">MULTIMEDIA</h1>
+                </div>
+                <img src="image/multimedia/Group 114.png" alt="">
+                <img src="image/multimedia/Group 111.png" alt="">
+                <img src="image/multimedia/Group 112.png" alt="">
+                <img src="image/multimedia/Group 113.png" alt="">
+                </button>
             </div>
         </div>
     </div>
-</section>
+<!-- </section> -->
 <section>
-    <div class="inline">
-        <h1 class="ttl-line">apa kata mereka ? </h1>
-        <div class="line"></div>
+    <div class="testi">
+            <h1 class="text-judul">Testimony</h1>
+            <h1 class="text-sub">Client Testimonials</h1>
+            <div class="line">
+                <h1>Apa Kata Mereka?</h1>
+                <div class="vertical"></div>
+            </div>
     </div>
 </section>
+<section>
+    <div class="client">
+        <h1 class="subju">Client</h1>
+        <div class="container">
+            <div class="scroll" id="scroll">
+                <div class="box-client">
+                    <img src="image/partner/Logo BNN 1.png" alt="">
+                    <h1>BNN</h1>
+                    <p>Badan Narkotika Nasional</p>
+                </div>
+                <div class="box-client">
+                    <img src="image/partner/AKA-removebg-preview 1.png" alt="">  
+                    <h1>POLITEKNIK AKA</h1>
+                    <p>Akademi Kimia Analis</p>
+                </div>
+                <div class="box-client">
+                    <img src="image/partner/Logo TVRI 1.png" alt="">  
+                    <h1>TVRI</h1>
+                    <p>Televisi Republik Indonesia</p>
+                </div>
+                <div class="box-client">
+                    <img src="image/partner/Untitled 2.png" alt="">  
+                    <h1>ZONA ADVANTURES</h1>
+                    <p>Zona Adventures Indonesia</p>
+                </div>
+                <div class="box-client">
+                    <img src="image/partner/Untitled 1.png" alt="">  
+                    <h1>KANTOR ADVOKAT</h1>
+                    <p>Kantor Advokat & Konsultan Hukum</p>
+                </div>
+                <div class="box-client">
+                    <img src="image/partner/Untitled 6.png" alt="">  
+                    <h1>MAP</h1>
+                    <p>Masyarakat Adat Puncak</p>
+                </div>
+                <div class="box-client">
+                    <img src="image/partner/Untitled 8.png" alt="">  
+                    <h1>SANGKURIANG</h1>
+                    <p>Yayasan Sangkuriang</p>
+                </div>
+                <div class="box-client">
+                    <img src="image/partner/Untitled 7.png" alt="">  
+                    <H1>KCGP</H1>
+                    <p>Kwartir Cabang G.Pramuka Kota Bogor</p>
+                </div>
+                <div class="box-client">
+                    <img src="image/partner/Untitled 5.png" alt="">  
+                    <h1>PHR</h1>
+                    <p>Puncak Hotel Reservation</p>
+                </div>
+                <div class="box-client">
+                    <img src="image/partner/Untitled 4.png" alt="">  
+                    <h1>CUNANG HILL RESORT</h1>
+                    <p>Cunang Hill Resort</p>
+                </div>
+                <div class="box-client">
+                    <img src="image/partner/Untitled 3.png" alt=""> 
+                    <h1>THE HIGHLAND</h1> 
+                    <p>The Highland Resort - Hotel Bogor</p>
+                </div>
+                <div class="box-client">
+                    <img src="image/partner/Untitled 9.png" alt="">  
+                    <h1>MPC 521</h1>
+                    <p>Mpc 521 Micropiranti</p>
+                </div>
+            </div>
+            <button id="slide"><i class='bx bx-right-arrow-alt'></i></button>
+        </div>
+    </div>
+</section>
+
+<section>
+    <div class="sinang-line">
+        <h3><img src="image/sinang.svg" alt="">SINANG PERMATA GROUP</h3>
+        <div class="icon">
+        <a class="box-icon" href=""><i class='bx bxl-facebook'></i></a>
+        <a class="box-icon" href="mailto:sinangpermatagroup@gmail.com"><i class='bx bxl-gmail' ></i></a>
+        <a class="box-icon" href=""><i class='bx bxl-twitter'></i></a>
+        <a class="box-icon" href="https://youtube.com/@sinangpermatatv1320" target="_blank"><i class='bx bxl-youtube' ></i></a>
+        </div>
+        <div class="horizontal"></div>
+    </div>
+    <div class="maps">  
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3962.9565178512594!2d106.87967411409593!3d-6.652311966880139!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69c84418c2b885%3A0x89cdb817d0fd8ca1!2sJl.%20Raya%20Puncak%20Gadog%20No.4%2C%20Cipayung%20Datar%2C%20Kec.%20Megamendung%2C%20Kabupaten%20Bogor%2C%20Jawa%20Barat%2016770!5e0!3m2!1sid!2sid!4v1675406023059!5m2!1sid!2sid" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </div>
+    <div class="contact-foot">
+    <div class="menu-1">
+        <h3 class="our">Our Company</h3>
+        <ul>
+            <li><a href="">About Us</a></li>
+            <li><a href="">Contact Us</a></li>
+            <li><a href="">Our Technolgy</a></li>
+            <li><a href="">Product</a></li>
+        </ul>
+    </div>
+    <div class="menu-2">
+        <h3 class="ser">Our Service</h3>
+        <ul>
+            <li><a href="">Analys Program</a></li>
+            <li><a href="">Web Development</a></li>
+            <li><a href="">Mobile Development</a></li>
+            <li><a href="">UI/UX Design</a></li>
+        </ul>
+    </div>
+    <div class="menu-3">
+        <h3>Want to talk with Us?</h3>
+        <p>We are always at your services</p>
+        <button><a href="">
+            CONTACT US 
+            <div class="btn1"><i class='bx bx-chevron-right'></i></div>
+        </a></button>
+    </div>
+</div>
+</section>
+
+<footer>
+    <h3>&copy; SINANG PERMATA GROUP</h3>
+</footer>
 <script src="Asset/js/style.js"></script>
 </body>
 </html>
