--- a/index.html
+++ b/index.html
@@ -88,7 +88,6 @@
         <h1 class="titleow">Our Working Process</h1>
         <div class="border-container">
         <div class="border1">
-            <!-- <img  src="image/workflow/Arrow 1.png"  class="arow" alt=""> -->
             <h3 class="font">PLANNING</h3>
         </div>
         <div class="border2">
@@ -143,7 +142,7 @@
     </div>
 <!-- </section> -->
 <section>
-    <div class="testi">
+    <div class = "testi">
             <h1 class="text-judul">Testimony</h1>
             <h1 class="text-sub">Client Testimonials</h1>
             <div class="line">
@@ -265,10 +264,14 @@
         </a></button>
     </div>
 </div>
+<div class="alamat">
+    <p>JL.Raya Puncak Cipayung Girang No.4 <br>
+        Kecamatan Megamendung, Kabupaten Bogor 16770</p>
+</div>
 </section>
 
 <footer>
-    <h3>&copy; SINANG PERMATA GROUP</h3>
+    <h3>&copy; SINANG PERMATA GROUP 2023</h3>
 </footer>
 <script src="Asset/js/style.js"></script>
 </body>
