--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <section id="header">
     <nav>
         <div class="wrapper">
-            <div class="logo"><a href="index.html""><img src="image/sinang.svg" alt=""> Sinang Permata</a></div>
+            <div class="logo"><a href="index.html"><img src="image/sinang.svg" alt=""> Sinang Permata</a></div>
             <div class="menu">
                 <ul>
                     <li><a href="#home">Home</a></li>
